--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
     <main class="home" id="home">   <!-- for all divs -->
       <div class="main-intro" id="main-intro">
         <div class="main-home">
-          <img src="/images/picture2.png"  alt="profile piccture">
-          <h1>Hi, I am Ali Azimi</h1>
-          <p class="wmu">A Computer Science Student @ <span>WMU</span></p>
+          <div class="pic-name">
+            <img src="/images/picture2.png"  alt="profile piccture">
+            <!-- <h1>Hi, I am Ali Azimi</h1> -->
+            <div class="name-college">
+              <h1>Ali Azimi</h1>
+              <p class="wmu">A Computer Science Student @ <span>WMU</span></p>  
+            </div>
+          </div>
+          <!-- <p class="wmu">A Computer Science Student @ <span>WMU</span></p> -->
           <p class="intro-bio" id="myIntro">
             I am currently an undergraduate student working towards my bachelor's degree in 
             computer science at Western Michigan University.
@@ -51,17 +57,12 @@
         <!-- skills section design -->
         <div class="skills" id="skills">
           <div><h1 id="headings">Languages & Skills</h1></div>
-          <div class="row">
+          <div class="line"></div>
+          <div class="row"> 
             <div class="col">
               <div class="icons"><i class='bx bxl-python'></i></div>
               <h1>Python</h1>
             </div>
-            
-            <div class="col">
-              <div class="icons"><i class='bx bxl-django'></i></div>
-              <h1>django</h1>
-            </div>
-
             <div class="col">
               <div class="icons"><i class='bx bxl-html5' ></i></div>
               <h1>HTML5</h1>
