--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- nav bar section design -->
     <nav >
       <!-- class="header" -->
-      <a href="/index.html"><img src="/images/ali.png" alt="logo" class="logo" title="Home Page"></a>  
+      <a href="/index.html"><img src="/images/logo.png" alt="logo" class="logo" title="Home Page"></a>  
       <i class='bx bx-menu menu-icon' id="menu-icon"></i>
       <ul class="nav-menu">
         <i class='bx bx-x exit-icon' id="exit-icon" ></i>
