--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <h1 id="headings">Project<span>s</span></h1>
         <div class="line"></div>
         <div class="proj-container">
-          <a href="https://github.com/aliazim1/CWA">
+          <a href="https://github.com/aliazim1/CWA" target="blank">
             <div class="proj-box" title="Click to open the project link">
               <img src="/images/mac.png" alt="Average Down Calculator">
               <h1>CWA Assessment</h1>
@@ -178,25 +178,25 @@
         </div>
         <div class="links-div">
           <div class="each-link">
-            <a href="https://github.com/aliazim1" class="url">
+            <a href="https://github.com/aliazim1" target="blank" class="url">
               <div class="link-icon"><i class='bx bxl-github' id="ic"></i></div>
               <p class="sub">Github</p>
             </a>
           </div>
           <div class="each-link">
-            <a href="https://github.com/aliazim1" class="url">
+            <a href="https://www.linkedin.com/in/ali-azimi-977a74275/" target="blank" class="url">
               <div class="link-icon"><i class='bx bxl-linkedin' id="ic"></i></div>
               <p class="sub">LinkedIn</p>
             </a>
           </div>
           <div class="each-link">
-            <a href="https://app.joinhandshake.com/stu/users/29432970" class="url">
+            <a href="https://app.joinhandshake.com/stu/users/29432970" target="blank" class="url">
               <div class="link-icon"><i class='bx bx-heading' id="ic"></i></div>
               <p class="sub">Handshake</p>
             </a>
           </div>
           <div class="each-link">
-            <a href="https://www.facebook.com/ali.azimi.144181/" class="url">
+            <a href="https://www.facebook.com/ali.azimi.144181/" target="blank" class="url">
               <div class="link-icon"><i class='bx bxl-facebook'id="ic"></i></div>
               <p class="sub">Facebook</p>
             </a>
