--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </head>
   <body>
-    <div class="loader"></div>
-
+    <!-- spinner section -->
+    <div class="spin-parent">
+      <div class="new-spinner">
+        <div class="ring"></div>
+        <div class="load-text">loading...</div>
+      </div>
+    </div>
+    
     <!-- nav bar section design -->
     <nav >
       <!-- class="header" -->
