--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img src="/images/picture2.png"  alt="profile piccture">
             <div class="name-college">
               <h1>Ali Azimi</h1>
-              <p class="wmu">A Computer Science Student @ <span>WMU</span></p>  
+              <p class="wmu">A Computer Science Student @<span id="wmu">WMU</span></p>  
             </div>
           </div>
           <p class="intro-bio" id="myIntro">
