--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="main-intro" id="main-intro">
         <div class="main-home">
           <div class="pic-name">
-            <img src="/images/picture2.png"  alt="profile piccture">
+            <img src="/images/profpic.png"  alt="profile piccture">
             <div class="name-college">
               <h1>Ali Azimi</h1>
               <p class="wmu">A Computer Science Student @<span id="wmu">WMU</span></p>  
@@ -94,6 +94,10 @@
             <div class="col">
               <div class="icons"><i class='bx bxl-jquery' ></i></div>
               <h1>jQuery</h1>
+            </div>
+            <div class="col">
+              <div class="icons"><i class='bx bxl-react' ></i></div>
+              <h1>ReactNative</h1>
             </div>
             <div class="col">
               <div class="icons"><i class='bx bxl-php'></i></div>
@@ -190,21 +194,15 @@
             </a>
           </div>
           <div class="each-link">
-            <a href="https://www.linkedin.com/in/ali-azimi-977a74275/" target="blank" class="url">
-              <div class="link-icon"><i class='bx bxl-linkedin' id="ic"></i></div>
-              <p class="sub">LinkedIn</p>
-            </a>
-          </div>
-          <div class="each-link">
             <a href="https://app.joinhandshake.com/stu/users/29432970" target="blank" class="url">
               <div class="link-icon"><i class='bx bx-heading' id="ic"></i></div>
               <p class="sub">Handshake</p>
             </a>
           </div>
           <div class="each-link">
-            <a href="https://www.facebook.com/ali.azimi.144181/" target="blank" class="url">
-              <div class="link-icon"><i class='bx bxl-facebook'id="ic"></i></div>
-              <p class="sub">Facebook</p>
+            <a href="https://www.linkedin.com/in/ali-azimi-977a74275/" target="blank" class="url">
+              <div class="link-icon"><i class='bx bxl-linkedin' id="ic"></i></div>
+              <p class="sub">LinkedIn</p>
             </a>
           </div>
         </div>
