back to top btn added

--- a/studyabroad/htmls/gallery.html
+++ b/studyabroad/htmls/gallery.html
@@ -81,8 +81,11 @@
                 </a>
             </div>
         </div>
+        <div id="top-btn" onclick="scrollToTop()"><i class='bx bx-arrow-to-top'></i></div>
     </footer>
     <script src="/studyabroad/js/functionality.js"></script>
     <script src="/studyabroad/js/tripgallery.js"></script>
+    <script src="/studyabroad/js/top.js"></script>
+
 </body>
 </html>
