--- a/studyabroad/htmls/home.html
+++ b/studyabroad/htmls/home.html
@@ -75,8 +75,10 @@
                 </a>
             </div>
         </div>
+        <div id="top-btn" onclick="scrollToTop()"><i class='bx bx-arrow-to-top'></i></div>
     </footer>
     <script src="/studyabroad/js/functionality.js"></script>
     <script src="/studyabroad/js/dailyAct.js"></script>
+    <script src="/studyabroad/js/top.js"></script>
 </body>
 </html>
