--- a/studyabroad/htmls/more.html
+++ b/studyabroad/htmls/more.html
@@ -152,7 +152,10 @@
                 </a>
             </div>
         </div>
+        <div id="top-btn" onclick="scrollToTop()"><i class='bx bx-arrow-to-top'></i></div>
     </footer>
     <script src="/studyabroad/js/functionality.js"></script>
+    <script src="/studyabroad/js/top.js"></script>
+
 </body>
 </html>
