--- a/studyabroad/htmls/thanks.html
+++ b/studyabroad/htmls/thanks.html
@@ -72,8 +72,11 @@
               </a>
           </div>
       </div>
+      <div id="top-btn" onclick="scrollToTop()"><i class='bx bx-arrow-to-top'></i></div>
   </footer>
   <script src="/studyabroad/js/functionality.js"></script>
   <script src="/studyabroad/js/data.js"></script>
+  <script src="/studyabroad/js/top.js"></script>
+
 </body>
 </html>
