some changes added

--- a/studyabroad/htmls/home.html
+++ b/studyabroad/htmls/home.html
@@ -42,13 +42,15 @@
     <main>
         <div class="all-titles">
             <div class="heading-line">
-                <h1>About My  <span>Journey</span></h1>
+                <h1 class="about-heading">About My  <span>Journey</span></h1>
                 <div class="line"></div>
             </div>
-            <p>Welcome to My Study Abroad Journey. Here, I will share the highlights
-                 of my study abroad experience in Santo Domingo, Dominican Republic.</p>
+            <p class="heading-p">Welcome to My Study Abroad Journey. Here, I will share the highlights
+                of my study abroad experience in Santo Domingo, Dominican Republic.</p>
         </div>
-        <div class="activity-parent">
+        </div>
+        
+        <div class="activity-parent" class="all-acts">
             <div class="each-day"></div>
         </div>
     </main>
