added more js and css

--- a/studyabroad/htmls/home.html
+++ b/studyabroad/htmls/home.html
@@ -25,7 +25,7 @@
         <nav class="off-screen-menu">
             <ul class="nav-menu">
                 <li><a href="/studyabroad/htmls/home.html" style="color: #00abf0">Home</a></li>
-                <li><a href="/studyabroad/htmls/about.html">Event</a></li>
+                <li><a href="/studyabroad/htmls/about.html">Learnings</a></li>
                 <li><a href="/studyabroad/htmls/gallery.html">Gallery</a></li>
                 <li><a href="/studyabroad/htmls/thanks.html">Thanks</a></li>
                 <li><a href="/studyabroad/htmls/more.html">More</a></li>
