--- a/studyabroad/htmls/more.html
+++ b/studyabroad/htmls/more.html
@@ -26,7 +26,7 @@
         <nav class="off-screen-menu">
             <ul class="nav-menu">
                 <li><a href="/studyabroad/htmls/home.html">Home</a></li>
-                <li><a href="/studyabroad/htmls/about.html">Event</a></li>
+                <li><a href="/studyabroad/htmls/about.html">Learnings</a></li>
                 <li><a href="/studyabroad/htmls/gallery.html">Gallery</a></li>
                 <li><a href="/studyabroad/htmls/thanks.html">Thanks</a></li>
                 <li><a href="/studyabroad/htmls/more.html" style="color: #00abf0">More</a></li>
@@ -41,7 +41,6 @@
     </header>
     
     <main>
-        <!-- contact section design -->
         <div class="sections" id="contact">
             <div class="all-titles">
                 <div class="heading-line">
@@ -51,62 +50,15 @@
                 <p>These are what students say based on their Study Abroad experiences in the Dominican Republic</p>
             </div>
 
-
-            <div class="feedbacks">
-                <div class="each-experience">
-                    <div class="bothAE">
-                        <div>
-                            <h3 class="exp-txt">Experience</h3>
-                            <div class="exper">
-                                <p><i class='bx bxs-quote-left' ></i> DR is beautiful place to go because the people there are very welcoming and friendly. I did not know that much Spanish but everytime I walked to store then greeted them "Hola como estas", and I received a nice friendly smile from them. I had not seen that so long since coming to America. I didn’t have any challenges in this experience except getting my passport the day before I travel.
-                                    Academic I would say that somehow I don’t why but after visiting multiple schools in DR open my eye on globe disparities such education system and healthcare access. Also I improved my communication skills with people with different backgrounds. <i class='bx bxs-quote-right' ></i>
-                                </p>
-                            </div>
-                        </div>
-                        <div>
-                            <h3>Advice</h3>
-                            <div class="exper">
-                                <p><i class='bx bxs-quote-left' ></i> If you have not traveled to this country, please take this opportunity to gain some knowledge and experience. You will
-                                    enjoy everything in the DR. I do not think Seita Program would let me go again otherwise I will do again and again (every year). <i class='bx bxs-quote-right' ></i>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+            <div class="feedbacks"></div>
             <div class="all-titles">
                 <div class="heading-line">
                     <h1>What <span>Dr. Lewis </span>says?</h1>
                     <div class="line"></div>
                 </div>
             </div>
-            <div class="professor">
-                <div class="each-experience">
-                    <div class="bothAE">
-                        <div>
-                            <h3 class="exp-txt">Experience</h3>
-                            <div class="exper">
-                                <p><i class='bx bxs-quote-left' ></i> As the professor of the course, my favorite part is having the opportunity to connect with the Seita Scholars themselves.
-                                    I make it a point to try to spend individual time with each student either during the class or while we are abroad. I enjoy learning 
-                                    from the students as much as from The experience abroad itself. Also, it's an honor having the chance to see the country through their 
-                                    eyes provides new insights for me each time. <i class='bx bxs-quote-right' ></i>
-                                </p>
-                            </div>
-                        </div>
-                        <div>
-                            <h3>Advice</h3>
-                            <div class="exper">
-                                <p><i class='bx bxs-quote-left' ></i> Please at least consider it. A lot of students think they can't go because they won't be able to afford it but please talk to
-                                    your coach before counting it out. Also, please get your passport as soon as possible. <i class='bx bxs-quote-right' ></i>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
-
+            <div class="professor"></div>
             <div class="all-titles">
                 <div class="heading-line">
                     <h1>Let's stay <span>Connected</span></h1>
@@ -155,6 +107,7 @@
         <div id="top-btn" onclick="scrollToTop()"><i class='bx bx-arrow-to-top'></i></div>
     </footer>
     <script src="/studyabroad/js/functionality.js"></script>
+    <script src="/studyabroad/js/feedbacks.js"></script>
     <script src="/studyabroad/js/top.js"></script>
 
 </body>
