--- a/studyabroad/htmls/about.html
+++ b/studyabroad/htmls/about.html
@@ -26,7 +26,7 @@
         <nav class="off-screen-menu">
             <ul class="nav-menu">
                 <li><a href="/studyabroad/htmls/home.html">Home</a></li>
-                <li><a href="/studyabroad/htmls/about.html" style="color: #00abf0">Event</a></li>
+                <li><a href="/studyabroad/htmls/about.html" style="color: #00abf0">Learnings</a></li>
                 <li><a href="/studyabroad/htmls/gallery.html">Gallery</a></li>
                 <li><a href="/studyabroad/htmls/thanks.html">Thanks</a></li>
                 <li><a href="/studyabroad/htmls/more.html">More</a></li>
