--- a/studyabroad/htmls/about.html
+++ b/studyabroad/htmls/about.html
@@ -48,7 +48,8 @@
                 <div class="line"></div>
             </div>
             <p class="learn-desc">Stepping outside our comfort zone often leads to uncomfortable situations, which are 
-                valuable learning experiences. I'll share an event I observed that stood out to me the most, and the lessons they taught me.
+                valuable learning experiences. Undoubtedly, I learned a lot from this trip, but I want to share an event I 
+                observed that stood out to me the most, and the lessons it taught me.
             </p>
         </div>
 
@@ -81,11 +82,17 @@
                     <li> It taught me the value of pushing boundaries and potential that lies in exploring new and
                          innovative ways to express myself.</li>
                     <li>Another lesson I learned is that age is not necessarily a barrier to achieving excellence.</li>
-                    <li>This performance highlighted the importance of creativity and innovation. It encouraged me to
-                        explore unconventional ways to combine different fields of interest.</li>
+                    <li>Academically, this performance taught me the importance of creativity and innovation. I learned to be more 
+                        open-mind and willing to explore unconventional ways to combine different fields of interest to come up with
+                         better and more innovative solutions to any problems.</li>
                 </ul>
-                <p class="last-p">Last but not least, I can apply these lessons not only in artistic endeavors but also in problem-solving in my future studies and
-                    career by embracing creativity, communicating effectively, both verbally and non-verbally.</p>   
+            </div>
+            <div class="learn-section">
+                <h2>How this lesson is practical?</h2>
+                <p class="last-p">As a computer Science student, I can apply these lessons not only in artistic endeavors but also 
+                    in problem-solving in my future studies and career by practicing over and over, thinking creatively, pushing 
+                    bounderies, testing and iterating solutions, staying open-minded, and communicating effectively with team members, 
+                    both verbally and non-verbally.</p>
             </div>
         </div>
     </main>
