--- a/studyabroad/htmls/gallery.html
+++ b/studyabroad/htmls/gallery.html
@@ -41,7 +41,7 @@
                     <h1>Photo <span>Gallery</span></h1>
                     <div class="line"></div>
                 </div>
-                <p>Here you find some of the pictures we have taken from our Study Abroad trip in the Dominican Republic.</p>
+                <p>Here, you will find some of the pictures we have taken on our Study Abroad trip in the Dominican Republic. (Tap for a closer look).</p>
 
             </div>
             <div class="card-parent"></div>
