--- a/studyabroad/htmls/home.html
+++ b/studyabroad/htmls/home.html
@@ -28,7 +28,7 @@
                 <li><a href="/studyabroad/htmls/about.html">Learnings</a></li>
                 <li><a href="/studyabroad/htmls/gallery.html">Gallery</a></li>
                 <li><a href="/studyabroad/htmls/thanks.html">Thanks</a></li>
-                <li><a href="/studyabroad/htmls/more.html">More</a></li>
+                <li><a href="/studyabroad/htmls/more.html">Insights</a></li>
             </ul>
         </nav>
 
