--- a/studyabroad/htmls/gallery.html
+++ b/studyabroad/htmls/gallery.html
@@ -22,7 +22,7 @@
                 <li><a href="/studyabroad/htmls/about.html">Learnings</a></li>
                 <li><a href="/studyabroad/htmls/gallery.html" style="color: #00abf0">Gallery</a></li>
                 <li><a href="/studyabroad/htmls/thanks.html">Thanks</a></li>
-                <li><a href="/studyabroad/htmls/more.html">More</a></li>
+                <li><a href="/studyabroad/htmls/more.html">Insights</a></li>
             </ul>
         </nav>
 
