--- a/studyabroad/htmls/more.html
+++ b/studyabroad/htmls/more.html
@@ -29,7 +29,7 @@
                 <li><a href="/studyabroad/htmls/about.html">Learnings</a></li>
                 <li><a href="/studyabroad/htmls/gallery.html">Gallery</a></li>
                 <li><a href="/studyabroad/htmls/thanks.html">Thanks</a></li>
-                <li><a href="/studyabroad/htmls/more.html" style="color: #00abf0">More</a></li>
+                <li><a href="/studyabroad/htmls/more.html" style="color: #00abf0">Insights</a></li>
             </ul>
         </nav>
 
