--- a/studyabroad/htmls/about.html
+++ b/studyabroad/htmls/about.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <header class="nav-section">
-        <div class="logo"><h1>Seita Scholars Study Abroad 2024</h1></div>
+        <div class="logo"><h1>🇺🇸 Seita Scholars Study Abroad 2024 🇩🇴</h1></div>
         <nav class="off-screen-menu">
             <ul class="nav-menu">
                 <li><a href="/studyabroad/htmls/home.html">Home</a></li>
@@ -48,7 +48,7 @@
                 <div class="line"></div>
             </div>
             <p class="learn-desc">Stepping outside our comfort zone often leads to uncomfortable situations, which are 
-                valuable learning experiences. Undoubtedly, I learned a lot from this trip, but I want to share an event I 
+                valuable learning experiences. I learned a lot from this trip, but I want to share an event I 
                 observed that stood out to me the most, and the lessons it taught me.
             </p>
         </div>
