--- a/studyabroad/htmls/gallery.html
+++ b/studyabroad/htmls/gallery.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="nav-section">
-        <div class="logo"><h1>Seita Scholars Study Abroad 2024</h1></div>
+        <div class="logo"><h1>🇺🇸 Seita Scholars Study Abroad 2024 🇩🇴</h1></div>
         <nav class="off-screen-menu">
             <ul class="nav-menu">
                 <li><a href="/studyabroad/htmls/home.html">Home</a></li>
@@ -42,7 +42,6 @@
                     <div class="line"></div>
                 </div>
                 <p>Here, you will find some of the pictures we have taken on our Study Abroad trip in the Dominican Republic. (Tap for a closer look).</p>
-
             </div>
             <div class="card-parent"></div>
             <div id="modal" class="modal">
