--- a/studyabroad/htmls/home.html
+++ b/studyabroad/htmls/home.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="nav-section">
-        <div class="logo"><h1>Seita Scholars Study Abroad 2024</h1></div>
+        <div class="logo"><h1>🇺🇸 Seita Scholars Study Abroad 2024 🇩🇴</h1></div>
         <nav class="off-screen-menu">
             <ul class="nav-menu">
                 <li><a href="/studyabroad/htmls/home.html" style="color: #00abf0">Home</a></li>
@@ -38,7 +38,7 @@
                 <div class="line"></div>
             </div>
             <p class="heading-p">Welcome to My Study Abroad Journey. Here, I will share the highlights
-                of my study abroad experience in Santo Domingo, Dominican Republic.</p>
+                of my time studying abroad in Santo Domingo, Dominican Republic 🇩🇴</p>
         </div>
         </div>
         
