--- a/studyabroad/htmls/more.html
+++ b/studyabroad/htmls/more.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <header class="nav-section">
-        <div class="logo"><h1>Seita Scholars Study Abroad 2024</h1></div>
+        <div class="logo"><h1>🇺🇸 Seita Scholars Study Abroad 2024 🇩🇴</h1></div>
         <nav class="off-screen-menu">
             <ul class="nav-menu">
                 <li><a href="/studyabroad/htmls/home.html">Home</a></li>
@@ -47,7 +47,7 @@
                     <h1>What <span>students </span>say?</h1>
                     <div class="line"></div>
                 </div>
-                <p>These are what students say based on their Study Abroad experiences in the Dominican Republic</p>
+                <p>Here's what students have to say about their Study Abroad experiences in the Dominican Republic</p>
             </div>
 
             <div class="feedbacks"></div>
