--- a/studyabroad/htmls/thanks.html
+++ b/studyabroad/htmls/thanks.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="nav-section">
-        <div class="logo"><h1>Seita Scholars Study Abroad 2024</h1></div>
+        <div class="logo"><h1>🇺🇸 Seita Scholars Study Abroad 2024 🇩🇴</h1></div>
         <nav class="off-screen-menu">
             <ul class="nav-menu">
                 <li><a href="/studyabroad/htmls/home.html">Home</a></li>
