--- a/studyabroad/htmls/home.html
+++ b/studyabroad/htmls/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Home - SSSA 2024</title>
+    <title>About My Journey - SSSA 2024</title>
     <link rel="stylesheet" href="/studyabroad/htmls/styles.css">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
