flags for all pages

--- a/studyabroad/htmls/gallery.html
+++ b/studyabroad/htmls/gallery.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="nav-section">
-        <div class="logo"><h1>🇺🇸 Seita Scholars Study Abroad 2024 🇩🇴</h1></div>
+        <div class="logo"><h1><span class="flags">🇺🇸</span> Seita Scholars Study Abroad 2024 <span class="flags">🇩🇴</span></h1></div>
         <nav class="off-screen-menu">
             <ul class="nav-menu">
                 <li><a href="/studyabroad/htmls/home.html">Home</a></li>
