extra items added

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
+
     <!-- box icons link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
@@ -53,11 +54,12 @@
             </div>
           </div>
           <p class="intro-bio" id="myIntro">
-            I am currently an undergraduate student working towards my bachelor's degree in 
-            computer science at Western Michigan University.
-            My interests include software design and development, artificial intelligence, 
-            and machine learning. Throughout my studies, I have been learning about multiple 
-            disciplines to get a feel for what sparks my interest the most.
+            Hello there, I’m Ali Azimi, a computer science undergraduate at Western Michigan University with
+             a passion for software design, development, artificial intelligence, and machine 
+             learning. Through my academic journey, I've explored diverse fields within computer
+              science, honing my skills and discovering my enthusiasm for building innovative 
+              solutions. My projects reflect my commitment to continuous learning and 
+              problem-solving, and I’m excited to apply my knowledge to real-world challenges.
           </p>
         </div>
         <div class="main-home">
@@ -103,6 +105,22 @@
             <div class="col">
               <div class="icons"><i class='bx bxl-php'></i></div>
               <h1>PHP</h1>
+            </div>
+            <div class="col">
+              <div class="icons"><i class='bx bxl-flutter'></i></div>
+              <h1>Flutter</h1>
+            </div>
+            <div class="col">
+              <div class="icons"><i class='bx bxl-unity'></i></div>
+              <h1>Unity</h1>
+            </div>
+            <div class="col">
+              <div class="icons"><i class='bx bxl-git'></i></div>
+              <h1>Git</h1>
+            </div>
+            <div class="col">
+              <div class="icons"><i class='bx bxl-firebase'></i></div>
+              <h1>Firebase</h1>
             </div>
           </div>
         </div>
