--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,12 +54,10 @@
             </div>
           </div>
           <p class="intro-bio" id="myIntro">
-            Hello there, I’m Ali Azimi, a computer science undergraduate at Western Michigan University with
-             a passion for software design, development, artificial intelligence, and machine 
-             learning. Through my academic journey, I've explored diverse fields within computer
+            Hello there, I’m Ali Azimi, an undergraduate student majoring in computer science at Western Michigan University with
+             a passion for software design, development. Through my academic journey, I've explored diverse fields within computer
               science, honing my skills and discovering my enthusiasm for building innovative 
-              solutions. My projects reflect my commitment to continuous learning and 
-              problem-solving, and I’m excited to apply my knowledge to real-world challenges.
+              solutions. I am currently seeking internships and part-time job opportunities to apply my knowledge to real-world challenges.
           </p>
         </div>
         <div class="main-home">
