--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,10 +54,12 @@
             </div>
           </div>
           <p class="intro-bio" id="myIntro">
-            Hello there, I’m Ali Azimi, an undergraduate student majoring in computer science at Western Michigan University with
-             a passion for software design, development. Through my academic journey, I've explored diverse fields within computer
-              science, honing my skills and discovering my enthusiasm for building innovative 
-              solutions. I am currently seeking internships and part-time job opportunities to apply my knowledge to real-world challenges.
+            Hello there! I’m Ali Azimi, an undergraduate Computer Science student at Western 
+            Michigan University, passionate about software design and development. Through my 
+            academic journey, I’ve gained experience in diverse fields within computer science,
+             refining my skills and fueling my enthusiasm for building innovative solutions. As
+              a senior, set to graduate in April 2025, I am actively seeking internship or part-time
+               job opportunities to apply my knowledge to real-world challenges
           </p>
         </div>
         <div class="main-home">
