--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,12 +54,12 @@
             </div>
           </div>
           <p class="intro-bio" id="myIntro">
-            Hello there! I’m Ali Azimi, an undergraduate Computer Science student at Western 
-            Michigan University, passionate about software design and development. Through my 
-            academic journey, I’ve gained experience in diverse fields within computer science,
-             refining my skills and fueling my enthusiasm for building innovative solutions. As
-              a senior, set to graduate in April 2025, I am actively seeking internship or part-time
-               job opportunities to apply my knowledge to real-world challenges
+            Hi there, and welcome to my portfolio. I’m Ali Azimi, a senior studying 
+            Computer Science at Western Michigan University. I’m passionate about
+             software design and development and always eager to learn and make a 
+             difference through meaningful projects. I’ll be graduating in April 2025,
+              and I’m currently on the lookout for internship or part-time job 
+              opportunities to sharpen my skills and dive deeper into the tech world.
           </p>
         </div>
         <div class="main-home">
@@ -68,9 +68,10 @@
         
         <!-- skills section design -->
         <div class="skills" id="skills">
-          <div><h1 id="headings">Languages & Skills</h1></div>
+          <div><h1 id="headings">Technical Skills</h1></div>
           <div class="line"></div>
           <div class="row"> 
+
             <div class="col">
               <div class="icons"><i class='bx bxl-python'></i></div>
               <h1>Python</h1>
@@ -109,10 +110,6 @@
             <div class="col">
               <div class="icons"><i class='bx bxl-flutter'></i></div>
               <h1>Flutter</h1>
-            </div>
-            <div class="col">
-              <div class="icons"><i class='bx bxl-unity'></i></div>
-              <h1>Unity</h1>
             </div>
             <div class="col">
               <div class="icons"><i class='bx bxl-git'></i></div>
