new changes added

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -206,15 +206,21 @@
             </a>
           </div>
           <div class="each-link">
-            <a href="https://app.joinhandshake.com/stu/users/29432970" target="blank" class="url">
-              <div class="link-icon"><i class='bx bx-heading' id="ic"></i></div>
-              <p class="sub">Handshake</p>
-            </a>
-          </div>
-          <div class="each-link">
             <a href="https://www.linkedin.com/in/ali-azimi-977a74275/" target="blank" class="url">
               <div class="link-icon"><i class='bx bxl-linkedin' id="ic"></i></div>
               <p class="sub">LinkedIn</p>
+            </a>
+          </div>
+          <div class="each-link">
+            <a href="mailto:emailtoazimi@gmail.com" target="blank" class="url">
+              <div class="link-icon"><i class='bx bxs-envelope' id="ic"></i></div>
+              <p class="sub">Email</p>
+            </a>
+          </div>
+          <div class="each-link">
+            <a href="tel:+16167529529" target="blank" class="url">
+              <div class="link-icon"><i class='bx bxs-phone'  id="ic"></i></div>
+              <p class="sub">Phone</p>
             </a>
           </div>
         </div>
